--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -11,7 +11,16 @@ on:
 jobs:
   build:
     name: "Build"
-    uses: ETDV-TheVoid/pokemon-rgb-enhanced/.github/workflows/build.yml@main
+    runs-on: ubuntu-latest
+    steps:
+      - id: checkout
+        name: "Checkout pokemon-rgb-enhanced"
+        uses: actions/checkout@v2.4.0
+        with:
+          submodules: recursive
+      - id: build
+        name: "Initiate Build"
+        uses: .github/workflows/build.yml@main
   release:
     name: "Release"
     runs-on: ubuntu-latest
