--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,20 @@ jobs:
     name: "Build Ubuntu"
     runs-on: ubuntu-latest
     steps:
+      # CHECKOUT REPOSITORY
+      - id: checkout
+        name: "Checkout pokemon-rgb-enhanced"
+        uses: actions/checkout@v2.4.0
+        with:
+          submodules: recursive
+      - id: verify
+        name: "Verify latest"
+        run: |
+          if ! git diff-index --quiet HEAD --; then
+            echo 'Uncommitted changes detected:'
+            git diff-index HEAD --
+            return 1
+          fi
       - name: Set environment variable
         run: |
           echo "SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-8)" >> $GITHUB_ENV
